clean-up. error management improvements

--- a/src/app/auth/auth-callback/auth-callback.page.html
+++ b/src/app/auth/auth-callback/auth-callback.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Respuesta de la autenticación</ion-title>
+    <ion-title>Authentication response</ion-title>
   </ion-toolbar>
 </ion-header>
 
