--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -22,7 +22,7 @@
       </ion-label>
     </ion-item>
     <ion-item>
-      <ion-label position="stacked">Another API ID (resource)<ion-text color="danger">*</ion-text>
+      <ion-label position="stacked">Another API ID (resource), if a scope is required include it<ion-text color="danger">*</ion-text>
       </ion-label>
       <ion-input type="text" [(ngModel)]="secondApi"></ion-input>
       <ion-button (click)="useRefreshForOtherApi()">Get Token</ion-button>
