--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -40,7 +40,10 @@
       ></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="stacked">API (Resource)</ion-label>
+      <ion-label position="stacked"
+        >API (Resource). If you select Scope also include the scopes required
+        for the API here.</ion-label
+      >
       <ion-input
         type="text"
         [(ngModel)]="targetApi"
@@ -48,7 +51,9 @@
       ></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="stacked">Resource/Scope</ion-label>
+      <ion-label position="stacked"
+        >Include API as resource or as Scope</ion-label
+      >
       <ion-toggle
         slot="end"
         [(ngModel)]="targetAsResource"
@@ -65,29 +70,44 @@
         [readonly]="isLoggedIn()"
       ></ion-input>
     </ion-item>
-  </ion-list>
-  <ion-list lines="full" >
-    <ion-list-header>
-      Remember to configure following the redirect URIs in your identity
-      provider</ion-list-header
-    >
 
-    <ion-item>
-      <ion-label>{{getRedirectUri()}}</ion-label>
-      <ion-note>This is the url where the identity provider will redirect the browser after authenticate the user</ion-note>
-    </ion-item>
-    <ion-item>
-      <ion-label>{{getLogoutRedirectUri()}}</ion-label>
-      <ion-note>This is the url where the identity provider will redirect the browser after logout the user</ion-note>
-    </ion-item>
-    <ion-item>
-      <ion-label>{{getSilentRedirectUri()}}</ion-label>
-      <ion-note>This is the url that is open in an iframe trying silent renew. It also requires to configure X-Frame-Options in the identity provider </ion-note>
-    </ion-item>
-    <ion-item>
-      <ion-label>{{getBaseUrl()}}</ion-label>
-      <ion-note color="important">This in a SPA application, so it is necessary to configure CORS in your STS to allow retrieve tokens.</ion-note>
-    </ion-item>
+    
+    <ion-item-group >
+      <ion-item-divider><ion-label>Requisites</ion-label></ion-item-divider>
+      <ion-list-header>
+        Remember to configure following the redirect URIs in your identity
+        provider</ion-list-header
+      >
+
+      <ion-item>
+        <ion-label>{{getRedirectUri()}}</ion-label>
+        <ion-note
+          >This is the url where the identity provider will redirect the browser
+          after authenticating the user</ion-note
+        >
+      </ion-item>
+      <ion-item>
+        <ion-label>{{getLogoutRedirectUri()}}</ion-label>
+        <ion-note
+          >This is the url where the identity provider will redirect the browser
+          after logging out the user</ion-note
+        >
+      </ion-item>
+      <ion-item>
+        <ion-label>{{getSilentRedirectUri()}}</ion-label>
+        <ion-note
+          >This is the url that is open in an iframe trying silent renew. It
+          also requires to configure X-Frame-Options in the identity provider
+        </ion-note>
+      </ion-item>
+      <ion-item>
+        <ion-label>{{getBaseUrl()}}</ion-label>
+        <ion-note color="important"
+          >This in a SPA application, so it is necessary to configure CORS in
+          your STS to allow retrieve tokens.</ion-note
+        >
+      </ion-item>
+    </ion-item-group>
   </ion-list>
 
   <div class="ion-padding">
