--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -31,7 +31,7 @@
     </ion-item>
     <ion-item>
       <ion-label position="stacked"
-        >Secret<ion-text color="danger">*</ion-text>
+        >Secret
       </ion-label>
       <ion-input
         type="text"
@@ -115,6 +115,17 @@
     <ion-button (click)="logout()" *ngIf="isLoggedIn()">Logout</ion-button>
     <ion-button (click)="saveConfig()">Save configuration</ion-button>
   </div>
+  <ion-card *ngIf="isLoggedIn() && getNotAcceptedScopes().length > 0">
+    <ion-card-header>
+      <ion-card-title>Not accepted scopes</ion-card-title>
+    </ion-card-header>
+    <ion-list>
+      <ion-item *ngFor="let scp of getNotAcceptedScopes()">
+        {{scp}}
+      </ion-item>
+    </ion-list>
+
+  </ion-card>
 
   <ion-card *ngIf="!isLoggedIn()">
     <ion-card-header>
